// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StandByLetterOfCredit Reducer FETCH_STANDBY_LETTERS_OF_CREDIT_SUCCESS should match snapshot 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "123": Immutable.Map {
      "cargoSnapshot": Immutable.Map {
        "parcels": Immutable.List [
          Immutable.Map {
            "deemedBLDate": undefined,
            "quantity": 600000,
            "loadingPlace": "Porto",
            "laycanPeriod": Immutable.Map {
              "startDate": "2017-12-31",
              "endDate": "2017-12-31",
            },
            "modeOfTransport": "VESSEL",
            "version": 2,
            "destinationPlace": "Weymouth",
            "_id": undefined,
            "id": "123",
          },
        ],
        "updatedAt": "2019-01-01T00:00:00.000Z",
        "status": "TO_BE_FINANCED",
        "sourceId": "E2389423",
        "cargoId": "F0401",
        "grade": "BRENT",
        "version": 2,
        "originOfGoods": "China",
        "_id": "123",
        "source": "KOMGO",
        "createdAt": "2019-01-01T00:00:00.000Z",
        "quality": "top",
      },
      "beneficiaryId": "0b5ad248-6159-47ca-9ac7-610c22877186",
      "contractDate": "2019-10-20",
      "expiryDate": "2019-10-11",
      "contractAddress": "0x2222",
      "overrideStandardTemplate": "Default legal template clauses",
      "stateHistory": Immutable.List [],
      "additionalInformation": "an additional info",
      "tradeSnapshot": Immutable.Map {
        "paymentTerms": Immutable.Map {
          "eventBase": "BL",
          "when": "AFTER",
          "time": 30,
          "timeUnit": "DAYS",
          "dayType": "CALENDAR",
        },
        "sellerEtrmId": undefined,
        "price": 70.02,
        "maxTolerance": 1.25,
        "deliveryLocation": "Weymouth",
        "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
        "quantity": 600000,
        "priceUnit": "BBL",
        "commodity": "CRUDE_OIL",
        "updatedAt": "2019-01-01T00:00:00.000Z",
        "currency": "EUR",
        "status": "TO_BE_FINANCED",
        "buyer": "node.123",
        "deliveryTerms": "FOB",
        "deliveryPeriod": Immutable.Map {
          "startDate": "2019-04-03",
          "endDate": "2019-04-10",
        },
        "sourceId": "E2389423",
        "paymentTermsOption": "DEFERRED",
        "version": 1,
        "buyerEtrmId": "buyerEtrmId",
        "invoiceQuantity": "LOAD",
        "_id": "123",
        "dealDate": "2017-12-31",
        "source": "KOMGO",
        "createdAt": "2019-01-01T00:00:00.000Z",
        "minTolerance": 1.25,
        "seller": "node.321",
      },
      "staticId": "123",
      "documentHash": "0x0001",
      "reference": "REF-0000-00",
      "transactionHash": "0x1111",
      "feesPayableBy": "SPLIT",
      "issuingBankComment": "'Don't do that!",
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2019-01-01T00:00:00.000Z",
      "availableWith": "ISSUING",
      "nonce": 0,
      "currency": "USD",
      "status": "REQUESTED",
      "beneficiaryBankRole": "ADVISING_BANK",
      "issuingBankPostalAddress": "99-97 a street London EC1 000",
      "amount": 1000,
      "version": 1,
      "issuingBankReference": "REF-123",
      "contractReference": "CREF-123",
      "duplicateClause": "YES",
      "createdAt": "2019-01-01T00:00:00.000Z",
      "beneficiaryBankId": "a28b8dc3-8de9-4559-8ca1-272ccef52b47",
      "applicantId": "1d0d6806-6fe7-47b2-aef2-efd458d66f26",
      "tradeId": Immutable.Map {
        "source": "KOMGO",
        "sourceId": "55918db4-8a94-495c-a9b3-0aafebc74328",
      },
      "comment": "comment",
    },
    "1234": Immutable.Map {
      "cargoSnapshot": Immutable.Map {
        "parcels": Immutable.List [
          Immutable.Map {
            "deemedBLDate": undefined,
            "quantity": 600000,
            "loadingPlace": "Porto",
            "laycanPeriod": Immutable.Map {
              "startDate": "2017-12-31",
              "endDate": "2017-12-31",
            },
            "modeOfTransport": "VESSEL",
            "version": 2,
            "destinationPlace": "Weymouth",
            "_id": undefined,
            "id": "123",
          },
        ],
        "updatedAt": "2019-01-01T00:00:00.000Z",
        "status": "TO_BE_FINANCED",
        "sourceId": "E2389423",
        "cargoId": "F0401",
        "grade": "BRENT",
        "version": 2,
        "originOfGoods": "China",
        "_id": "123",
        "source": "KOMGO",
        "createdAt": "2019-01-01T00:00:00.000Z",
        "quality": "top",
      },
      "beneficiaryId": "0b5ad248-6159-47ca-9ac7-610c22877186",
      "contractDate": "2019-10-20",
      "expiryDate": "2019-10-11",
      "contractAddress": "0x2222",
      "overrideStandardTemplate": "Default legal template clauses",
      "stateHistory": Immutable.List [],
      "additionalInformation": "an additional info",
      "tradeSnapshot": Immutable.Map {
        "paymentTerms": Immutable.Map {
          "eventBase": "BL",
          "when": "AFTER",
          "time": 30,
          "timeUnit": "DAYS",
          "dayType": "CALENDAR",
        },
        "sellerEtrmId": undefined,
        "price": 70.02,
        "maxTolerance": 1.25,
        "deliveryLocation": "Weymouth",
        "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
        "quantity": 600000,
        "priceUnit": "BBL",
        "commodity": "CRUDE_OIL",
        "updatedAt": "2019-01-01T00:00:00.000Z",
        "currency": "EUR",
        "status": "TO_BE_FINANCED",
        "buyer": "node.123",
        "deliveryTerms": "FOB",
        "deliveryPeriod": Immutable.Map {
          "startDate": "2019-04-03",
          "endDate": "2019-04-10",
        },
        "sourceId": "E2389423",
        "paymentTermsOption": "DEFERRED",
        "version": 1,
        "buyerEtrmId": "buyerEtrmId",
        "invoiceQuantity": "LOAD",
        "_id": "123",
        "dealDate": "2017-12-31",
        "source": "KOMGO",
        "createdAt": "2019-01-01T00:00:00.000Z",
        "minTolerance": 1.25,
        "seller": "node.321",
      },
      "staticId": "1234",
      "documentHash": "0x0001",
      "reference": "REF-0000-00",
      "transactionHash": "0x1111",
      "feesPayableBy": "SPLIT",
      "issuingBankComment": "'Don't do that!",
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2019-01-01T00:00:00.000Z",
      "availableWith": "ISSUING",
      "nonce": 0,
      "currency": "USD",
      "status": "REQUESTED",
      "beneficiaryBankRole": "ADVISING_BANK",
      "issuingBankPostalAddress": "99-97 a street London EC1 000",
      "amount": 1000,
      "version": 1,
      "issuingBankReference": "REF-123",
      "contractReference": "CREF-123",
      "duplicateClause": "YES",
      "createdAt": "2019-01-01T00:00:00.000Z",
      "beneficiaryBankId": "a28b8dc3-8de9-4559-8ca1-272ccef52b47",
      "applicantId": "1d0d6806-6fe7-47b2-aef2-efd458d66f26",
      "tradeId": Immutable.Map {
        "source": "KOMGO",
        "sourceId": "55918db4-8a94-495c-a9b3-0aafebc74328",
      },
      "comment": "comment",
    },
  },
  "ids": Immutable.List [
    "123",
    "1234",
  ],
  "total": 2,
}
`;

exports[`StandByLetterOfCredit Reducer GET_STANDBY_LETTER_OF_CREDIT_SUCCESS should match snapshot 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "123": Immutable.Map {
      "cargoSnapshot": Immutable.Map {
        "parcels": Immutable.List [
          Immutable.Map {
            "deemedBLDate": undefined,
            "quantity": 600000,
            "loadingPlace": "Porto",
            "laycanPeriod": Immutable.Map {
              "startDate": "2017-12-31",
              "endDate": "2017-12-31",
            },
            "modeOfTransport": "VESSEL",
            "version": 2,
            "destinationPlace": "Weymouth",
            "_id": undefined,
            "id": "123",
          },
        ],
        "updatedAt": "2019-01-01T00:00:00.000Z",
        "status": "TO_BE_FINANCED",
        "sourceId": "E2389423",
        "cargoId": "F0401",
        "grade": "BRENT",
        "version": 2,
        "originOfGoods": "China",
        "_id": "123",
        "source": "KOMGO",
        "createdAt": "2019-01-01T00:00:00.000Z",
        "quality": "top",
      },
      "beneficiaryId": "0b5ad248-6159-47ca-9ac7-610c22877186",
      "contractDate": "2019-10-20",
      "expiryDate": "2019-10-11",
      "contractAddress": "0x2222",
      "overrideStandardTemplate": "Default legal template clauses",
      "stateHistory": Immutable.List [],
      "additionalInformation": "an additional info",
      "tradeSnapshot": Immutable.Map {
        "paymentTerms": Immutable.Map {
          "eventBase": "BL",
          "when": "AFTER",
          "time": 30,
          "timeUnit": "DAYS",
          "dayType": "CALENDAR",
        },
        "sellerEtrmId": undefined,
        "price": 70.02,
        "maxTolerance": 1.25,
        "deliveryLocation": "Weymouth",
        "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
        "quantity": 600000,
        "priceUnit": "BBL",
        "commodity": "CRUDE_OIL",
        "updatedAt": "2019-01-01T00:00:00.000Z",
        "currency": "EUR",
        "status": "TO_BE_FINANCED",
        "buyer": "node.123",
        "deliveryTerms": "FOB",
        "deliveryPeriod": Immutable.Map {
          "startDate": "2019-04-03",
          "endDate": "2019-04-10",
        },
        "sourceId": "E2389423",
        "paymentTermsOption": "DEFERRED",
        "version": 1,
        "buyerEtrmId": "buyerEtrmId",
        "invoiceQuantity": "LOAD",
        "_id": "123",
        "dealDate": "2017-12-31",
        "source": "KOMGO",
        "createdAt": "2019-01-01T00:00:00.000Z",
        "minTolerance": 1.25,
        "seller": "node.321",
      },
      "staticId": "123",
      "documentHash": "0x0001",
      "reference": "REF-0000-00",
      "transactionHash": "0x1111",
      "feesPayableBy": "SPLIT",
      "issuingBankComment": "'Don't do that!",
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2019-01-01T00:00:00.000Z",
      "availableWith": "ISSUING",
      "nonce": 0,
      "currency": "USD",
      "status": "REQUESTED",
      "beneficiaryBankRole": "ADVISING_BANK",
      "issuingBankPostalAddress": "99-97 a street London EC1 000",
      "amount": 1000,
      "version": 1,
      "issuingBankReference": "REF-123",
      "contractReference": "CREF-123",
      "duplicateClause": "YES",
      "createdAt": "2019-01-01T00:00:00.000Z",
      "beneficiaryBankId": "a28b8dc3-8de9-4559-8ca1-272ccef52b47",
      "applicantId": "1d0d6806-6fe7-47b2-aef2-efd458d66f26",
      "tradeId": Immutable.Map {
        "source": "KOMGO",
        "sourceId": "55918db4-8a94-495c-a9b3-0aafebc74328",
      },
      "comment": "comment",
    },
  },
  "ids": Immutable.List [],
  "total": 0,
}
`;
